<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@color/white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            android:text="Login"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:backgroundTint="@color/light_blue"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/form_username"/>

            <EditText
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:backgroundTint="@color/light_blue"
                android:hint="@string/form_password"
                android:maxLines="1"
                android:inputType="textPassword"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/light_blue"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:onClick="viewForgotPassword"
            android:clickable="true"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/button_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/light_blue"
            android:text="@string/hint_signup"
            android:onClick="viewRegisterClicked"
            android:clickable="true"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>